# marketing-spec-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE-v2.0.0.md  marketing-spec-kit.json  pyproject.toml
.metaspec/: README.md
.metaspec/commands/: metaspec.sdd.implement.md
changes/2025-11-15-add-workflow-system/: impact.md  proposal.md  tasks.md
changes/2025-11-15-add-workflow-system/specs/: spec-delta.md
docs/: MIGRATION.md  sdm-commands.md
docs/design-decisions/: optional-src-generation.md
docs/internal/: PRD.md
examples/: complete-example.yaml  complete-v2-example.yaml  metaspec-marketing-plan.md  metaspec-marketing.yaml  sdm-workflow-example.md
memory/: constitution.md
scripts/: init.sh
scripts/bash/: create-new-feature.sh
specs/: README.md
specs/domain/001-marketing-operations-spec/: spec.md  workflow-redesign.md
specs/domain/001-marketing-operations-spec/analysis/: full-analysis.md  quick-analysis.md
specs/domain/001-marketing-operations-spec/checklists/: comprehensive-quality.md
specs/domain/001-marketing-operations-spec/clarifications/: session-2025-11-14.md
specs/toolkit/001-marketing-spec-kit-implementation/: plan.md  spec.md  tasks.md
specs/toolkit/001-marketing-spec-kit-implementation/analysis/: full-analysis-v1.md  full-analysis.md  quick-analysis.md
specs/toolkit/001-marketing-spec-kit-implementation/checklists/: comprehensive-quality.md
src/marketing_spec_kit/: __init__.py  cli.py  exceptions.py  generator.py  models.py  parser.py  validator.py
src/marketing_spec_kit/project_templates/: constitution.md.j2  gitignore.j2  readme.md.j2  specs-readme.md.j2
templates/: README.md
templates/custom/commands/: marketing.analytics.campaign.md  marketing.analytics.plan.md  marketing.campaign.design.md  marketing.campaign.md  marketing.channel.md  marketing.content.plan.md  marketing.content_template.md  marketing.execute.publish.md  marketing.execute.schedule.md  marketing.generate.article.md  marketing.generate.email.md  marketing.generate.landing_page.md  marketing.generate.post.md  marketing.milestone.md  marketing.optimize.suggest.md  marketing.plan.analyze.md  marketing.plan.create.md  marketing.plan.get.md  marketing.plan.validate.md  marketing.product.md  marketing.project.md  marketing.tool.md
templates/entity_templates/: default.yaml
templates/sdm/: README.md
templates/sdm/commands/: .command-list.txt  README.md  marketspec.analyze.md  marketspec.checklist.md  marketspec.clarify.md  marketspec.constitution.md  marketspec.create.md  marketspec.discover.md  marketspec.implement.md  marketspec.optimize.md  marketspec.plan.md  marketspec.review.md  marketspec.specify.md  marketspec.strategy.md  marketspec.tasks.md
templates/sdm/templates/: full.yaml  minimal.yaml
tests/fixtures/: minimal-spec.yaml
