[project]
name = "marketing-spec-kit"
version = "0.4.0"
description = "Specification Toolkit for Marketing Operations - Transform marketing chaos into structured, AI-driven workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "marketing-spec-kit Contributors"},
]

keywords = [
    "marketing",
    "spec-driven",
    "marketing-operations",
    "campaign-management",
    "marketing-automation",
    "ai-agents",
    "workflow",
]

dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
]

[project.urls]
repository = "https://github.com/ACNet-AI/marketing-spec-kit"
homepage = "https://github.com/ACNet-AI/marketing-spec-kit"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
marketing_spec_kit = "marketing_spec_kit.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--cov=marketing_spec_kit", "--cov-report=term"]

[tool.metaspec]
# MetaSpec metadata - enables community to discover speckit capabilities
generated_by = "0.9.7"
domain = "marketing"

# CLI commands this speckit provides
cli_commands = ["info", "init", "validate"]

# Slash command system type (SDM - Spec-Driven Marketing)
sd_type = "sdm"

# Slash commands this speckit provides (for AI agents)
slash_commands = [
    "marketspec.constitution",
    "marketspec.specify",
    "marketspec.clarify",
    "marketspec.plan",
    "marketspec.tasks",
    "marketspec.implement",
    "marketspec.review",
    "marketspec.optimize",
    "marketspec.analyze",
    "marketspec.checklist",
]

# Generated by MetaSpec 0.6.2 on 2025-11-14
# Updated to MetaSpec 0.7.3 on 2025-11-16
# Updated to MetaSpec 0.8.1 on 2025-11-17 (Added Specification Usage Workflow guidance)
# Updated to MetaSpec 0.9.0 on 2025-11-18 (Use Case → Component Analysis)
# Updated to MetaSpec 0.9.1 on 2025-11-18 (Generator Pattern Clarification - Generator removed)
# Updated to MetaSpec 0.9.2 on 2025-11-18 (Specification Toolkit Pattern - Correct Generator definition)
# Updated to MetaSpec 0.9.3 on 2025-11-19 (Slash Commands Deployment - Complete Generator implementation)
# Updated to MetaSpec 0.9.5 on 2025-11-19 (Generator vs AI Commands - Infrastructure only, NO spec templates)
# Updated to MetaSpec 0.9.6 on 2025-11-22 (Speckit Metadata Support - Added cli_commands, domain, sd_type, slash_commands)
# Updated to MetaSpec 0.9.7 on 2025-11-22 (Commands synced to v0.9.7)
